@@ -85,7 +85,12 @@ THE SQUIRRELMAIL TEAM
    Taiwan        Ching <ching@kiwa.com.tw>
    Thai          Nartpong Ampornaramweth <yongnarak@yahoo.com>  
    Turkish       Volkan Yildirim <volkan@ozzmosis.pleksus.net.tr>
+   Ukrainian     Oleg Baranovsky <oleg@uazone.net>
+    (Ukrainian is not supported unless someone updates translation.
+     translation is not in Ukrainian)
    Vietnamese    Le Viet Hung <heros@hcm.fpt.vn>
+    (Vietnamese is not supported unless someone updates translation.
+     translation is not in Vietnamese)
    Welsh	 Andrew Rawlins <awr@aber.ac.uk> 
 
  Significant Contributions:
