@@ -8,6 +8,8 @@ Version 1.4.3 - CVS
   - HTML Filter bugfixes and further strengthening in response to some
     findings reported by stardust.
   - Display total number of new messages in newmail-plugin popup window.
+  - Disabled Vietnamese and Ukrainian translations. They are done in different
+    language.
 
 Version 1.4.2 - 1 October 2003
 ------------------------------
